--- a/packages/@examples/01-basic/src/views/sections/sandbox/sandbox.twig
+++ b/packages/@examples/01-basic/src/views/sections/sandbox/sandbox.twig
@@ -1,5 +1,5 @@
-<section {{ __id(id) }} class="section-sandbox" s-specs="views.sections.sandbox">
-    {{ __specsDataTemplate(_context)|raw }}   
+<section {{ __id(id) }} class="section-sandbox">
+    {{ __nodeDataTemplate('views.sections.sandbox', _context)|raw }}   
 
     <div class="_type">
         <h1 class="_title">String</h1>
