--- a/packages/@examples/01-basic/src/views/sections/contact/contact.twig
+++ b/packages/@examples/01-basic/src/views/sections/contact/contact.twig
@@ -57,8 +57,8 @@
     },
 } %}
 
-<section {{ __id(id) }} class="section-contact" s-specs="views.sections.contact.contact" s-appear in="bottom" delay="600">
-    {{ __specsDataTemplate(_context)|raw }}
+<section {{ __id(id) }} class="section-contact" s-appear in="bottom" delay="600">
+    {{ __nodeDataTemplate('views.sections.contact', _context)|raw }}
     <div class="s-container">
         <div class="_layout">
             <div s-appear in="left" delay="500">
