--- a/packages/@examples/01-basic/src/views/sections/separator/separator.twig
+++ b/packages/@examples/01-basic/src/views/sections/separator/separator.twig
@@ -1,5 +1,5 @@
-<section {{ __id(id) }} s-specs="views.sections.separator.separator" class="section-separator {{ __spacesClasses(spaces, frontspec) }}">
-    {{ __specsDataTemplate(_context)|raw }}
+<section {{ __id(id) }} class="section-separator {{ __spacesClasses(spaces, frontspec) }}">
+    {{ __nodeDataTemplate('views.sections.separator', _context)|raw }}
     <div class="_bkg">
         {% if image %}
             <img class="_img" src="{{ image.url }}" alt="{{ image.alt }}" />
