--- a/packages/app/s-carpenter/src/css/components/app.css
+++ b/packages/app/s-carpenter/src/css/components/app.css
@@ -1,8 +1,8 @@
 .s-carpenter-app {
-    position: fixed;
+    /* position: fixed;
     top: 0;
     right: 0;
     z-index: 500;
     width: 100vw;
-    height: 100vh;
+    height: 100vh; */
 }
