--- a/packages/components/s-filtrable-input-component/src/css/s-filtrable-input.css
+++ b/packages/components/s-filtrable-input-component/src/css/s-filtrable-input.css
@@ -18,15 +18,16 @@
         position: absolute;
         z-index: 10;
         top: 100%;
-        left: 0;
+        left: 50%;
         opacity: 0;
         max-width: calc(100vw - 100px);
-        width: 100%;
+        min-width: 100%;
         pointer-events: none;
         margin: 20px 0;
         overflow: hidden;
         display: flex;
         flex-direction: column;
+        transform: translateX(-50%);
     }
 
     &:focus-within .s-filtrable-input_dropdown {
