--- a/packages/app/s-carpenter/src/css/generic/drop-menu.css
+++ b/packages/app/s-carpenter/src/css/generic/drop-menu.css
@@ -1,8 +1,7 @@
-.dropup-menu,
-.dropdown-menu {
+.drop-menu {
     position: relative;
 
-    ._dropdown {
+    ._drop {
         position: absolute;
         top: 100%;
         left: 0;
@@ -16,7 +15,7 @@
 
     &:focus,
     &:focus-within {
-        ._dropdown {
+        ._drop {
             opacity: 1;
             pointer-events: all;
         }
@@ -36,11 +35,30 @@
         &:active {
             background: sugar.color(main, --alpha 0.2);
         }
+
+        i {
+            margin-inline-end: sugar.margin(10);
+        }
     }
 }
 
-.dropup-menu {
-    ._dropdown {
+.drop-menu--right {
+    ._drop {
+        top: 0;
+        left: 100%;
+    }
+}
+
+.drop-menu--left {
+    ._drop {
+        top: 0;
+        left: auto;
+        right: 100%;
+    }
+}
+
+.drop-menu--up {
+    ._drop {
         top: auto;
         bottom: 100%;
     }
