--- a/packages/tools/sugar/src/views/twig/sugar/components/cta/cta.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/components/cta/cta.twig
@@ -1,7 +1,7 @@
-<a id="{{ id.value }}" class="s-cta s-btn s-color:{{ color.value }} {{ attributes.class }}" {{ __attrs(attributes, ['class'])|raw }}
+<a id="{{ id.value }}" class="s-cta s-btn s-color:{{ color.value[0].value }} {{ attributes.class }}" {{ __attrs(attributes, ['class'])|raw }}
     href="{{ link.url }}"
     {% if link.newWindow %} target="_blank" {% endif %}
-    color="{{ color.value }}"
+    color="{{ color.value[0].value }}"
     title="{{ link.title }}"
 >
     {{ link.text }}
