--- a/packages/tools/sugar/src/views/twig/sugar/layouts/main/main.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/layouts/main/main.twig
@@ -78,5 +78,9 @@
 
     {% block body %}{% endblock %}
 
+    {% if carpenter %}
+        <s-carpenter id="carpenter"></s-carpenter>
+    {% endif %}
+
 </body>
 </html>
