--- a/packages/@examples/01-basic/src/views/sections/story/story.twig
+++ b/packages/@examples/01-basic/src/views/sections/story/story.twig
@@ -1,4 +1,4 @@
-<section {{ __id(id) }} class="section-story {{ __spacesClasses(spaces, frontspec) }}" layout="{{ layout }}" s-appear in="bottom" delay="500">
+<section {{ __id(id) }} class="section-story {{ __spacesClasses(spaces, frontspec) }}" layout="{{ layout.value[0].value }}" s-appear in="bottom" delay="500">
     {{ __nodeDataTemplate('views.sections.story', _context)|raw }}
     <div class="s-container">
         <div class="s-layout:{{ layout.value[0].value }} @mobile s-layout:1_2">
