--- a/packages/tools/sugar/src/views/twig/sugar/bare/layout/layout.twig
+++ b/packages/tools/sugar/src/views/twig/sugar/bare/layout/layout.twig
@@ -35,7 +35,7 @@
             {% if html %}
                 {{ html|raw }}
             {% elseif areas %}
-                {% for areaId, html in areas %}
+                {% for areaId, html in nodes %}
                     <div class="s-layout_area-{{ areaId }}" s-carpenter-container="area-{{ areaId }}">
                         {% if html %}
                             {{ html|raw }}
