--- a/packages/app/s-carpenter/src/css/components/website-toolbar.css
+++ b/packages/app/s-carpenter/src/css/components/website-toolbar.css
@@ -1,4 +1,4 @@
-.s-carpenter-website-toolbar {
+.s-carpenter-app_toolbar {
     position: absolute;
     z-index: 90000;
     background: sugar.color(main, background);
@@ -88,8 +88,8 @@
     }
 }
 
-body:has(.s-carpenter-app_node.hover) .s-carpenter-website-toolbar,
-.s-carpenter-website-toolbar:hover {
+body:has(.s-carpenter-app_node.hover) .s-carpenter-app_toolbar,
+.s-carpenter-app_toolbar:hover {
     opacity: 1;
     pointer-events: all;
 }
